fix(Client/Navbar)navbar persistent at scrolling, bblurred

--- a/src/components/Navbar/Navbar.style.css
+++ b/src/components/Navbar/Navbar.style.css
@@ -1,9 +1,31 @@
 .navbar {
-  z-index: 9999; /* para que se muestre sobre los demas elementos */
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 9999;
+  backdrop-filter: blur(10px); /* Efecto blur */
+  background-color: rgba(213, 209, 209, 0.4); /* Fondo transparente */
   display: flex;
   align-items: center;
-  background-color: #666666;
   height: 10vh;
+  transition: background-color 0.3s ease; /* Transición de color de fondo */
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+}
+
+.navbar.scrolled {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 9999;
+  backdrop-filter: blur(10px); /* Efecto blur */
+  background-color: rgba(213, 209, 209, 0.4); /* Fondo transparente */
+  display: flex;
+  align-items: center;
+  height: 10vh;
+  transition: background-color 0.3s ease; /* Transición de color de fondo */
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
 }
 
 .navbar-menu,
@@ -18,6 +40,8 @@
 .navbar-title {
   font-size: 1.3rem;
   font-weight: bold;
+  color: rgb(53, 53, 53); /* Color de texto */
+  text-shadow: black 0.4px 0.4px;
 }
 
 .navlinks-container {
@@ -26,9 +50,11 @@
 
 .navlinks {
   text-decoration: none;
-  color: black;
+  color: rgb(53, 53, 53); /* Color de texto */
   padding: 10px;
   font-size: 20px;
+  transition: color 0.3s ease; /* Transición de color de texto */
+  text-shadow: black 0.4px 0.4px;
 }
 
 .navlinks:hover {
@@ -51,6 +77,7 @@
   position: relative;
   overflow: hidden;
   z-index: 1;
+  transition: background-color 0.3s ease; /* Transición de color de fondo del botón */
 }
 
 .boton-out:hover {
@@ -67,7 +94,7 @@
   background-color: rgba(255, 255, 255, 0.2);
   transform: skewX(-20deg);
   z-index: -1;
-  transition: left 0.3s ease;
+  transition: left 1.3s ease;
 }
 
 .boton-out:hover::before {
